--- a/R_analyses/stechlin_analyses.Rmd
+++ b/R_analyses/stechlin_analyses.Rmd
@@ -1,6 +1,7 @@
 ---
 title: "Lab randomization of samples is important"
 author: "Miki Bálint"
+date: "`r format(Sys.time(), '%d %B, %Y')`"
 ---
 
 ``` {r include = FALSE}
@@ -37,28 +38,192 @@ ExpSet = read.csv(file = "../../../Data/Stechlin_pre-analysis/sample_infos.csv",
                   header = T, row.names = 1)
 ```
 
+How many reads are there?
+```{r}
+IndexSample = grep("sample.[EMPS]", names(EmblAssign))
+sum(EmblAssign[,IndexSample])
+```
+
 ## Filter the DNA abundance data
-which columns have the status info for head, internal, singletons?
+### Heads, singletons, internals
+Which columns have the status info for head, internal, singletons?
 ```{r}
 StatusEmbl = EmblAssign[,grepl("obiclean.status", names(EmblAssign))]
+```
 
-# summarize the status info for each seq. variant
-# redundant with the kept columns
-# EmblAssign = data.frame(EmblAssign,
-#                         h_count = rowSums(StatusEmbl == "h", na.rm=T),
-#                         s_count = rowSums(StatusEmbl == "s", na.rm=T), 
-#                         i_count = rowSums(StatusEmbl == "i", na.rm=T))
+Keep only sequence variants that were seen at least once as 'head' or 
+the 'singleton' count is higher than the 'intermediate' count.
 
-# Keep only sequence variants that were seen at least once as 'head' or 
-# the 'singleton' count is higher than the 'intermediate' count
+```{r}
 EmblHead = EmblAssign[(EmblAssign$obiclean_headcount) > 0 | 
                         EmblAssign$obiclean_singletoncount > EmblAssign$obiclean_internalcount,]
+```
 
-##### Clean up negative controls
-# Remove the maximum read number of a sequence variant 
-# found in a negative control from every sample that 
-# contains that variant
+### Plot all samples, replicates, controls.
+Technical replicates should go together. Controls should be distant from the samples.
+```{r}
+# OTU abundance matrix
+RepliMatrix = EmblHead[,grep('sample.', names(EmblHead))]
+RepliMatrix = RepliMatrix[,1:96]
 
+# Remove OTUs with no observations
+RepliMatrix = RepliMatrix[apply(RepliMatrix,1,sum) > 0, ]
+summary(apply(RepliMatrix, 1,sum))
+```
+
+Estimate overdispersion parameters for each OTU with `mvabund`.
+Fit a negative binomial model where the single predictor is the number
+of reads of each sample.
+```{r}
+# mvabund input matrix
+Repli.mvabund = mvabund(t(RepliMatrix))
+
+# Explanatory variables
+RepliExp = ExpSet[1:96,]
+
+# simple model, similar to the LVM ordination
+theta.model = manyglm(Repli.mvabund ~ reads, data = RepliExp,
+                      family = "negative.binomial")
+```
+```{r include=FALSE, eval=FALSE}
+# diagnostics
+plot(theta.model, which = c(1:3))
+```
+
+A few OTUs have weird dispersion parameters. 
+```{r}
+# distribution of the overdispersion parameters
+hist(theta.model$theta)
+hist(log(theta.model$theta)) 
+rownames(RepliMatrix[theta.model$theta > 30,])
+```
+
+Model-based ordination with `boral`. 
+Running the model with these parameters takes a very long time. 
+Try lowering them for a quick(er) look, e.g.
+n.burnin=10, n.iteration=100, n.thin=1.
+```{r eval = FALSE}
+# Set the overdispersion prior
+set.prior = list(type = c("normal","normal","normal","uniform"),
+                 hypparams = c(100, 20, 100, 20))
+
+# LVM ordination on OTUs with relatively low overdispersion
+# This run would take a very long time.
+# comm.ord = boral(t(RepliMatrix)[,theta.model$theta < 30],
+#                  X = RepliExp$reads,
+#                  family = "negative.binomial", 
+#                  prior.control = set.prior, num.lv = 2, n.burnin = 1000, 
+#                  n.iteration = 4000, n.thin = 3)
+```
+
+Plot the ordination. Currently just include a previous ordination. The `.Rdata` file with the complete ordination run should be loaded once ready
+with `load.image()`, or knitted with `rmarkdown::render("your_doc.Rmd")`.
+```{r eval=FALSE}
+# Colors and symbols for samples
+RepliExpColors = data.frame(RepliExp, 
+                            symbols = c(c(rep(22,4), rep(23,2), 
+                                          rep(24,4), rep(25,2)),
+                                        na.omit(RepliExp$depth.nominal)))
+sample_colors = c(levels(factor(RepliExpColors$symbols*10)))
+sample_legend = c(levels(factor(RepliExpColors$depth)), 
+                  c("Extraction control",
+                    "Multiplex control",
+                    "PCR control",
+                    "Mock community"))
+
+# The LVM ordination plot
+par(mfrow = c(1,1), mar = c(4,4.5,1,1))
+ordicomm = ordiplot(comm.ord$lv.median, choices = c(1,2), 
+                    type = "none", cex =0.5,
+                    display = "sites", xlab = "Community axis 1",
+                    ylab = "Community axis 2", cex.lab = 1.5)
+points(ordicomm, "sites", lwd=2, 
+       col=RepliExpColors$symbols*10, 
+       pch = RepliExpColors$symbols)
+ordispider(ordicomm, RepliExpColors$symbols, 
+           col=sample_colors, lwd = 2)
+ordisurf(ordicomm, RepliExpColors$depth, add=T, col = "darkgrey")
+legend(-1.8, 0.9, sample_legend, border="white", bty="n", lwd = 2,
+col=sample_colors, pch = as.numeric(sample_colors)/10, cex = 0.5)
+```
+
+For now just load the plot from a previous short `boral` run.
+![](boral_plot.png)
+The replicates can be further evaluated, but this is not shown for now.
+```{r include=FALSE, eval=FALSE}
+# Further evaluations of samples from the ordination
+# color by person
+# points(ordicomm,"sites", lwd=2, 
+#        col=as.numeric(RepliExp$person)*100, pch = RepliExp$symbols)
+# legend(-1.8, 0.8, sample_legend, border="white", bty="n", lwd = 2,
+# col=sample_colors, pch = as.numeric(sample_colors)/10, cex = 0.9)
+# legend for person
+# legend(-1.8, 0, levels(RepliExp$person), 
+#        border="white", bty="n", lwd = 2,
+#        col=as.numeric(as.factor(levels(RepliExp$person)))*100, 
+#        pch = 19, cex = 0.9)
+# legend(-1.1, 1.15, "colors - samples/controls, symbols - replicates of sample/control, contours - depth", 
+# border="white", bty="n", cex = 0.9)
+# text(ordicomm,"sites",rownames(RepliExp), cex=0.5)
+# dev.off()
+
+# # plot for technical replicate explanation
+# ExplainColors = RepliExp$symbols
+# ExplainColors[ExplainColors != 10] <- 0
+# 
+# ExplainSampleColors = c(levels(factor(RepliExp$symbols*10)))
+# ExplainSampleColors[ExplainSampleColors != 100] <- 0
+# 
+# par(mfrow = c(1,1), mar = c(4,4,1,1))
+# ordicomm = ordiplot(comm.ord$lv.median, choices = c(1,2), type = "none", cex =0.5,
+#                     display = "sites")
+# points(ordicomm, "sites", lwd=2, 
+#        col=ExplainColors*10, pch = RepliExp$symbols)
+# # color by person
+# # points(ordicomm,"sites", lwd=2, 
+# #        col=as.numeric(RepliExp$person)*100, pch = RepliExp$symbols)
+# ordispider(ordicomm$sites, RepliExp$symbols, 
+#            col=ExplainSampleColors, lwd = 2)
+# ordisurf(ordicomm, RepliExp$depth, add=T, col = "grey")
+# legend(-1.8, 0.8, sample_legend, border="white", bty="n", lwd = 2,
+#        col=sample_colors, pch = as.numeric(sample_colors)/10, cex = 0.9)
+# # legend for person
+# # legend(-1.8, 0, levels(RepliExp$person), 
+# #        border="white", bty="n", lwd = 2,
+# #        col=as.numeric(as.factor(levels(RepliExp$person)))*100, 
+# #        pch = 19, cex = 0.9)
+# legend(-1.1, 1.15, "colors - samples/controls, symbols - replicates of sample/control, contours - depth", 
+#        border="white", bty="n", cex = 0.9)
+# # text(ordicomm,"sites",rownames(RepliExp), cex=0.5)
+
+# Family names in the positive controls
+# levels(factor(EmblHead$family_name[
+#   apply(EmblHead[,grep("sample.POS",names(EmblHead))],1,sum) > 0]))
+```
+
+Which are the weird replicates? 
+I will remove them once the negatives are cleared
+and the low reads are controlled with the positives.
+```{r}
+RepliProblems = c("sample.ST01.10.rep.1.MN_S1",
+                  "sample.ST01.7.5.rep.1.MB_S90",
+                  "sample.ST01.9.rep.1.MB_S14",
+                  "sample.ST01.5.5.rep.1.MN_S27",
+                  "sample.ST01.3.5.rep.1.MB_S12",
+                  "sample.ST01.5.5.rep.1.MB_S66",
+                  "sample.ST01.3.rep.1.MB_S40",
+                  "sample.ST01.2.rep.1.MB_S62",
+                  "sample.ST01.1.rep.2.MN_S51",
+                  "sample.ST01.8.5.rep.1.MB_S76")
+```
+
+### Clean up negative controls
+Remove the maximum read number of a sequence variant 
+found in a negative control from every sample that 
+contains that variant
+
+Select the extraction controls
+```{r}
 # Extraction controls
 ExtCont = grep("sample.EXT", names(EmblHead))
 
@@ -67,8 +232,10 @@ PCRCont = grep("sample.PCR", names(EmblHead))
 
 # Multiplexing controls
 MPXCont = grep("sample.MPX", names(EmblHead))
+```
 
-# Write out negative control assignments for more analysis
+Write out negative control assignments for more analysis
+```{r}
 NegCont = cbind(name = EmblHead$scientific_name, 
                 EmblHead[,c(ExtCont, PCRCont, MPXCont)])
 
@@ -82,293 +249,166 @@ NegRegate = NegRegate[apply(NegRegate,1,sum) > 0,]
 
 # Write for checking negatives
 write.csv(file = "negative_control_identities.csv", NegRegate)
+```
 
-# Maximum number of reads in any control sample
+How many reads are there before cleaning up the negatives?
+```{r}
+sum(EmblHead[,IndexSample])
+```
+
+`sweep` the maximum reads of a sequence variant
+in any controls from all samples
+```{r warning=FALSE}
+# warnings supressed because of a numeric-non-numeric substitution,
+# see below
 MaxControl = apply(EmblHead[,c(ExtCont,PCRCont,MPXCont)], 1, max)
 
-# Extract the highest read number of a sequence variant in a control 
-# from every sample
 EmblControlled = EmblHead
 
+# sweep with the MaxControl
 EmblControlled[,grep("sample", names(EmblHead))] <- 
   sweep(EmblHead[,grep("sample", names(EmblHead))], 1, MaxControl, "-")
 
 # Set negative values to 0. Warnings are because the non-numeric cells
+# There are warnings since many fields are non-numeric.
 EmblControlled[EmblControlled < 0] <- 0
 
 # Remove sequence variants with no reads left
 EmblControlled = EmblControlled[apply(EmblControlled[,grep("sample", names(EmblHead))],1,sum) > 0,]
+```
 
-# Write sequence variants of taxa in table
-# write.csv(file = "stechlin_taxon_abund_matrix.csv", SamCounts)
-# write.csv(file = "stechlin_seq-variant_abund_matrix.csv", SamGregate)
-write.csv(file = "variant_sequences.csv", data.frame(name = rownames(EmblControlled),
-                                                     sci = EmblControlled$scientific_name,
-                                                     seq = EmblControlled$sequence))
+How many reads are there after cleaning up the negatives?
+```{r}
+sum(EmblControlled[,IndexSample])
+```
 
-# Plot all samples, replicates, controls.
-# Plot the technical replicates: they should go together.
-# LVM for replicate outliers
+Write sequence variants of taxa into table
+```{r}
+write.csv(file = "variant_sequences.csv", 
+          data.frame(name = rownames(EmblControlled),                   
+                     name = EmblControlled$scientific_name,
+                     genus = EmblControlled$genus_name,
+                     family = EmblControlled$family_name,
+                     seq = EmblControlled$sequence))
+```
 
-# OTU abundance matrix
-RepliMatrix = EmblHead[,grep('sample.', names(EmblHead))]
-RepliMatrix = RepliMatrix[,1:96]
-# Remove OTUs with no observations
-RepliMatrix = RepliMatrix[apply(RepliMatrix,1,sum) > 0, ]
-summary(apply(RepliMatrix, 1,sum))
+### Rare read cleanup with positives controls
+Taxa in positive controls
 
-# Explanatory variables
-RepliExp = ExpSet[1:96,]
-
-# Estimate overdispersion parameters
-
-# mvabund input matrix
-Repli.mvabund = mvabund(t(RepliMatrix))
-
-# simple model, similar to the LVM ordination
-theta.model = manyglm(Repli.mvabund ~ reads, data = RepliExp,
-                      family = "negative.binomial")
-
-# diagnostics
-plot(theta.model, which = c(1:3))
-
-# distribution of the overdispersion parameters
-hist(theta.model$theta)
-hist(log(theta.model$theta)) # a few OTUs have weird dispersion parameters
-
-# OTUs with weird overdispersion
-rownames(RepliMatrix[theta.model$theta > 30,])
-
-# LVM model
-# Set overdispersion prior
-set.prior = list(type = c("normal","normal","normal","uniform"),
-                 hypparams = c(100, 20, 100, 20))
-
-# LVM ordination on OTUs with relatively low overdispersion
-comm.ord = boral(t(RepliMatrix)[,theta.model$theta < 30],
-                 family = "negative.binomial", 
-                 prior.control = set.prior, num.lv = 2, n.burnin = 10, 
-                 n.iteration = 100, n.thin = 1)
-
-# Colors and symbols for samples
-RepliExp = data.frame(RepliExp, 
-                      symbols = c(c(rep(22,4), rep(23,2), 
-                                    rep(24,4), rep(25,2)),
-                                  na.omit(RepliExp$depth.nominal)))
-
-plot(c(1:96), c(1:96), lwd=2, 
-     col=RepliExp$symbols*10, pch = RepliExp$symbols)
-sample_colors = c(levels(factor(RepliExp$symbols*10)))
-sample_legend = c(levels(factor(RepliExp$depth)), c("Extraction control",
-                                                    "Multiplex control",
-                                                    "PCR control",
-                                                    "Mock community"))
-# depth_names = unique(factor(ExpPredictor$depth))
-# pdf(file = "LVM_technical_replicates.pdf", width = 10)
-par(mfrow = c(1,1), mar = c(4,4.5,1,1))
-ordicomm = ordiplot(comm.ord$lv.median, choices = c(1,2), type = "none", cex =0.5,
-                    display = "sites", xlab = "Community axis 1",
-                    ylab = "Community axis 2", cex.lab = 1.5)
-points(ordicomm,"sites", lwd=2, 
-       col=RepliExp$symbols*10, pch = RepliExp$symbols)
-# color by person
-# points(ordicomm,"sites", lwd=2, 
-#        col=as.numeric(RepliExp$person)*100, pch = RepliExp$symbols)
-ordispider(ordicomm, RepliExp$symbols, 
-           col=sample_colors, lwd = 2)
-ordisurf(ordicomm, RepliExp$depth, add=T, col = "darkgrey")
-# legend(-1.8, 0.8, sample_legend, border="white", bty="n", lwd = 2,
-# col=sample_colors, pch = as.numeric(sample_colors)/10, cex = 0.9)
-# legend for person
-# legend(-1.8, 0, levels(RepliExp$person), 
-#        border="white", bty="n", lwd = 2,
-#        col=as.numeric(as.factor(levels(RepliExp$person)))*100, 
-#        pch = 19, cex = 0.9)
-# legend(-1.1, 1.15, "colors - samples/controls, symbols - replicates of sample/control, contours - depth", 
-# border="white", bty="n", cex = 0.9)
-# text(ordicomm,"sites",rownames(RepliExp), cex=0.5)
-# dev.off()
-
-# plot for technical replicate explanation
-
-ExplainColors = RepliExp$symbols
-ExplainColors[ExplainColors != 10] <- 0
-
-ExplainSampleColors = c(levels(factor(RepliExp$symbols*10)))
-ExplainSampleColors[ExplainSampleColors != 100] <- 0
-
-par(mfrow = c(1,1), mar = c(4,4,1,1))
-ordicomm = ordiplot(comm.ord$lv.median, choices = c(1,2), type = "none", cex =0.5,
-                    display = "sites")
-points(ordicomm, "sites", lwd=2, 
-       col=ExplainColors*10, pch = RepliExp$symbols)
-# color by person
-# points(ordicomm,"sites", lwd=2, 
-#        col=as.numeric(RepliExp$person)*100, pch = RepliExp$symbols)
-ordispider(ordicomm$sites, RepliExp$symbols, 
-           col=ExplainSampleColors, lwd = 2)
-ordisurf(ordicomm, RepliExp$depth, add=T, col = "grey")
-legend(-1.8, 0.8, sample_legend, border="white", bty="n", lwd = 2,
-       col=sample_colors, pch = as.numeric(sample_colors)/10, cex = 0.9)
-# legend for person
-# legend(-1.8, 0, levels(RepliExp$person), 
-#        border="white", bty="n", lwd = 2,
-#        col=as.numeric(as.factor(levels(RepliExp$person)))*100, 
-#        pch = 19, cex = 0.9)
-legend(-1.1, 1.15, "colors - samples/controls, symbols - replicates of sample/control, contours - depth", 
-       border="white", bty="n", cex = 0.9)
-# text(ordicomm,"sites",rownames(RepliExp), cex=0.5)
-
-# The mock communities seem to be pulling the weird replicates.
-# What are they?
-levels(factor(EmblHead$family_name[apply(EmblHead[,grep("sample.POS", names(EmblHead))],1,sum) > 0]))
-
-
-# Average and sum the OK replicates
-# Technical replicate problems, visually from the LVM plot
-# Most of these are from the first extraction replicate.
-# 6 / 8 are done by Orsi
-# # At least these
-# ST01−10−rep−1−MN_S1,
-# ST01−7−5−rep−1−MB_S90
-# ST01−9−rep−1−MB_S14
-# # More strictly these too
-# ST01−5−5−rep−1−MN_S27
-# ST01−3−5−rep−1−MB_S12
-# ST01−5−5−rep−1−MB_S66
-# ST01−3−rep−1−MB_S40
-# ST01−2−rep−1−MB_S62
-# ST01−1−rep−2−MN_S51
-# ST01−8−5−rep−1−MB_S76
-
-RepliProblems = c("ST01.10.rep.1.MN_S1",
-                  "ST01.7.5.rep.1.MB_S90",
-                  "ST01.9.rep.1.MB_S14",
-                  "ST01.5.5.rep.1.MN_S27",
-                  "ST01.3.5.rep.1.MB_S12",
-                  "ST01.5.5.rep.1.MB_S66",
-                  "ST01.3.rep.1.MB_S40",
-                  "ST01.2.rep.1.MB_S62",
-                  "ST01.1.rep.2.MN_S51",
-                  "ST01.8.5.rep.1.MB_S76")
-
-# Sample matrix with replicates
-# Only the abundances in the "samples" are in here, so no head etc. information
-SampleMatrix = EmblControlled[,grep('sample.', names(EmblControlled))]
-SampleMatrix = SampleMatrix[,1:96]
-
-# Abundance matrix without the problem replicates
-ControlMatrix = SampleMatrix[,grep(paste(rep("sample.",10), 
-                                         RepliProblems, sep = "", 
-                                         collapse = "|"), 
-                                   names(SampleMatrix), invert=T)]
-
-# Abundance matrix without the controls
-ControlMatrix = ControlMatrix[,grep("sample.ST", names(ControlMatrix))]
-
-# combine the replicates of samples
-# get sample names, code from here: http://stackoverflow.com/questions/9704213/r-remove-part-of-string
-SampleNames = levels(as.factor(sapply(strsplit(names(ControlMatrix),
-                                               split='rep', fixed=TRUE),
-                                      function(x) (x[1]))))
-
-## NOT DONE - Remove the OTUs observed in less, than 2 replicates here
-# In how many replicates observed per sample?
-PresentReps = data.frame(row.names = rownames(AbundControlled))
-for (i in 1:length(SampleNames)){
-  ActualSet = grep(SampleNames[i], names(AbundControlled))
-  Selected = AbundControlled[ActualSet]
-  Selected[Selected > 0] <- 1 # set the read numbers to 1
-  PresentReps = cbind(PresentReps, apply(Selected, 1, sum))
-}
-colnames(PresentReps) = SampleNames
-
-# Set read numbers to 0 in a sample if the sequence variant was not observed in at least
-# two PCR replicates
-SummedControlled = SummedReps
-SummedControlled[PresentReps < 2] <- 0
-
-# Average the replicates for each sample
-AveragedReps = data.frame(row.names = rownames(ControlMatrix))
-for (i in 1:length(SampleNames)){
-  ActualSet = grep(SampleNames[i], names(ControlMatrix)) # grep the columns of interest
-  AveragedReps = cbind(AveragedReps, apply(ControlMatrix[ActualSet], 1, mean))
-}
-colnames(AveragedReps) = SampleNames
-# write.csv(file="test.csv", AbundControlled)
-
-
-# Taxon recovery in positive controls
+```{r}
 PosCont = grep("^sample.POS", names(EmblControlled))
 
 # Abundances in positives and taxonomic annotations
 PosAbundances = EmblControlled[,c(PosCont,409,10,9)]
 
 # Sums of all reads / OTU and add to positive table
-SumReads = apply(EmblControlled[,grep("sample.[EMPS]", names(EmblControlled))], 1, sum)
+SumReads = apply(EmblControlled[,IndexSample], 1, sum)
 PosAbundances = cbind(PosAbundances, SumReads)
 
 # keep only OTUs that had reads
 PosAbundances = PosAbundances[apply(PosAbundances[,1:2],1,sum) > 0,]
+```
 
-# write out positive control samples + scientific name + genus + family name
+Write out positive control samples + 
+scientific name + genus + family name.
+```{r}
 write.csv(file="positive_controls.csv", PosAbundances)
+```
 
-# Lake_diversity/Analyses/stechlin_analyses/R_analyses/Positive_controls/positive_controls.xlsx
+I manually compared the reads of these OTUs to the 
+taxon list and DNA concentration list of the positives.
+I looked for a read count rarity threshold of the complete read numbers
+`612963` that would reflect the original positive taxon lists.
+
+When an OTU is present with less, than `31` reads in a replicate 
+(`0.005%` of the total reads `612963`, is considered erroneous 
+and set to `zero`.
+
+```{r warning=FALSE}
+RareControlled <- EmblControlled
+RareControlled[RareControlled < 31] <- 0
+```
+
+How many reads after removing rare observations?
+```{r}
+sum(RareControlled[,IndexSample])
+```
+
+## Effects of possible laboratory biases
+Lab worker, extraction order, PCR order effects on diversity and 
+composition come here.
+
+## Ecological evaluation of the 11-cm Stechlin core
+
+### Remove weird replicates
+Visually selected from the `boral` plot above
+```{r}
+# Abundance matrix without the controls
+IndexHorizon = grep("sample.ST", names(RareControlled))
+
+# A filter for weird horizon replicates
+RepliProblemFilter = 
+  names(RareControlled)[IndexHorizon] %in% RepliProblems
+
+# Only the samples kept
+HorizonMatrix = RareControlled[, IndexHorizon]
+
+# Weird replicates removed
+NoWeirdMatrix = HorizonMatrix[, !(RepliProblemFilter)]
+```
+
+### False positive control with detections in replicates
+Remove OTUs if not observed in at least 2 out of 4 replicates of a horizon
+How to do this was found here: http://stackoverflow.com/questions/9704213/r-remove-part-of-string
+
+Get the sample names. 
+```{r}
+SampleNames = levels(as.factor(sapply(strsplit(names(NoWeirdMatrix),
+                                               split='ep', fixed=TRUE),
+                                      function(x) (x[1]))))
+```
+
+In how many replicates observed per sample?
+```{r}
+PresentReps = data.frame(row.names = rownames(NoWeirdMatrix))
+for (i in SampleNames){
+  ActualSet = grep(i, names(NoWeirdMatrix))
+  Selected = NoWeirdMatrix[ActualSet]
+  Selected[Selected > 0] <- 1 # set the read numbers to 1
+  PresentReps = cbind(PresentReps, apply(Selected, 1, sum))
+}
+colnames(PresentReps) = SampleNames
+```
+
+Set read numbers to 0 in a sample if the sequence variant was not observed in at least two PCR replicates
+```{r}
+AveragedReps = data.frame(row.names = rownames(NoWeirdMatrix))
+for (i in SampleNames){
+  ActualSet = grep(i, names(NoWeirdMatrix)) # grep the columns of interest
+  AveragedReps = cbind(AveragedReps, 
+                       apply(NoWeirdMatrix[ActualSet], 1, mean))
+}
+colnames(AveragedReps) = SampleNames
+
+# Remove OTU observations if not seen in at least two replicates
+AveragedReps[PresentReps < 2] <- 0
+
+# Remove OTUs with no reads left
+AveragedReps = AveragedReps[apply(AveragedReps,1,sum) > 0,]
+
+# Round up the reads
+AveragedReps = ceiling(AveragedReps)
+```
+
+How many reads were found in the horizons? These are already averaged.
+```{r}
+sum(AveragedReps)
+```
+
+Taxonomy, read abundances and sequences of the remaining OTUs
 
 
-# Methods BORAL
-# model-based ordination
-# Estimate overdispersion parameters
-# mvabund input matrix
-EmblControlled[,grep("sample", names(EmblHead))]
 
-
-OTU.mvabund = mvabund(OTUCountsT)
-theta.model = manyglm(OTU.mvabund ~ data = ExpPredictor, 
-                      family = "negative.binomial")
-hist(core.m3$theta)
-
-# Set overdispersion prior
-set.prior = list(type = c("normal","normal","normal","uniform"),
-                 hypparams = c(100, 20, 100, 20))
-
-# LV ordination done on all OTUs with relatively low overdispersion
-comm.ord = boral(OTUCountsT[,core.m4$theta < 50],
-                 family = "negative.binomial", 
-                 prior.control = set.prior, num.lv = 2, n.burnin = 10, 
-                 n.iteration = 100, n.thin = 1)
-
-# The "core" OTUs. Faster, but same patterns
-# comm.ord.some = boral(OTU.some[,core.m3$theta < 50],
-#                       X = ExpPredictor$reads,
-#                       family = "negative.binomial", 
-#                       prior.control = set.prior, num.lv = 2, n.burnin = 10, 
-#                       n.iteration = 100, n.thin = 1)
-
-# Person effects on community composition
-ordicomm = ordiplot(comm.ord.some$lv.median, choices = c(1,2), type = "none", cex =0.5,
-                    display = "sites")
-points(ordicomm,"sites", pch=20, col=as.numeric(ExpPredictor$person))
-ordiellipse(ordicomm, ExpPredictor$person,cex=.5,
-            draw="polygon", col="black",
-            alpha=200,kind="se",conf=0.95,
-            show.groups=(c("Miki")))
-ordiellipse(ordicomm, ExpPredictor$person,cex=.5,
-            draw="polygon", col="red",
-            alpha=200,kind="se",conf=0.95,
-            show.groups=(c("Orsi")))
-
-
-# # Plot the ordinations
-# par(mfrow = c(2,2), mar = c(2,2,2,1))
-# predictors = c("reads", "extract_order", "weight", "conc")
-# for (i in predictors) {
-#   ordicomm = ordiplot(comm.ord$lv.median, choices = c(1,2), type = "none", cex =0.5,
-#                       display = "sites", xlim = c(-0.3,0.3))
-#   points(ordicomm,"sites", pch=20, col=as.numeric(ExpPredictor$person))
-#   ordisurf(ordicomm, ExpPredictor[,i], add=T, col = "black", main=i)
-# }
 
 ########
 # Community analyses
@@ -1167,3 +1207,63 @@ m3.anova$table
 # kable(community.anova$table)
 # community.summary = summary(methods.manyglm7, nBoot = 100, test = "LR")
 # kable(community.summary$coefficients)
+
+
+
+
+
+
+
+
+# Methods BORAL
+# model-based ordination
+# Estimate overdispersion parameters
+# mvabund input matrix
+EmblControlled[,grep("sample", names(EmblHead))]
+
+
+OTU.mvabund = mvabund(OTUCountsT)
+theta.model = manyglm(OTU.mvabund ~ data = ExpPredictor, 
+                      family = "negative.binomial")
+hist(core.m3$theta)
+
+# Set overdispersion prior
+set.prior = list(type = c("normal","normal","normal","uniform"),
+                 hypparams = c(100, 20, 100, 20))
+
+# LV ordination done on all OTUs with relatively low overdispersion
+comm.ord = boral(OTUCountsT[,core.m4$theta < 50],
+                 family = "negative.binomial", 
+                 prior.control = set.prior, num.lv = 2, n.burnin = 10, 
+                 n.iteration = 100, n.thin = 1)
+
+# The "core" OTUs. Faster, but same patterns
+# comm.ord.some = boral(OTU.some[,core.m3$theta < 50],
+#                       X = ExpPredictor$reads,
+#                       family = "negative.binomial", 
+#                       prior.control = set.prior, num.lv = 2, n.burnin = 10, 
+#                       n.iteration = 100, n.thin = 1)
+
+# Person effects on community composition
+ordicomm = ordiplot(comm.ord.some$lv.median, choices = c(1,2), type = "none", cex =0.5,
+                    display = "sites")
+points(ordicomm,"sites", pch=20, col=as.numeric(ExpPredictor$person))
+ordiellipse(ordicomm, ExpPredictor$person,cex=.5,
+            draw="polygon", col="black",
+            alpha=200,kind="se",conf=0.95,
+            show.groups=(c("Miki")))
+ordiellipse(ordicomm, ExpPredictor$person,cex=.5,
+            draw="polygon", col="red",
+            alpha=200,kind="se",conf=0.95,
+            show.groups=(c("Orsi")))
+
+
+# # Plot the ordinations
+# par(mfrow = c(2,2), mar = c(2,2,2,1))
+# predictors = c("reads", "extract_order", "weight", "conc")
+# for (i in predictors) {
+#   ordicomm = ordiplot(comm.ord$lv.median, choices = c(1,2), type = "none", cex =0.5,
+#                       display = "sites", xlim = c(-0.3,0.3))
+#   points(ordicomm,"sites", pch=20, col=as.numeric(ExpPredictor$person))
+#   ordisurf(ordicomm, ExpPredictor[,i], add=T, col = "black", main=i)
+# }
